# pycole

./: README.md  USAGE.md  example.py  pyproject.toml
src/pycole/: __init__.py  analyzer.py  cli.py  formatter.py
tests/: test_analyzer.py  test_cli.py  test_formatter.py
